# GG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/: .env.example  ARCHITECTURE.md  TEAM_REFERENCE.md  auth_test_ui.html  requirements.txt  run_migrations.py  test_register.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  audit.py  auth.py  categories.py  checklists.py  dashboards.py  equipment.py  locations.py  notifications.py  organizations.py  parts.py  reports.py  router.py  schedules.py  teams.py  users.py  workorders.py
backend/app/core/: __init__.py  email.py  exceptions.py  permissions.py  security.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: .test_credentials.json  test_auth_module.py  test_org_users_module.py
